--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,45 +1,47 @@
-version: '3.8'
+version: "3.8"
 
 services:
-  postgres:
-    image: postgres:16-alpine
-    container_name: feynman-postgres
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: feynman
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+    postgres:
+        image: postgres:16-alpine
+        container_name: feynman-postgres
+        environment:
+            POSTGRES_USER: postgres
+            POSTGRES_PASSWORD: postgres
+            POSTGRES_DB: feynman
+        ports:
+            - "5433:5432"
+        volumes:
+            - postgres_data:/var/lib/postgresql/data
+        healthcheck:
+            test: ["CMD-SHELL", "pg_isready -U postgres"]
+            interval: 10s
+            timeout: 5s
+            retries: 5
+        restart: unless-stopped
 
-  backend:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: feynman-backend
-    environment:
-      DB_HOST: postgres
-      DB_USER: postgres
-      DB_PASSWORD: postgres
-      DB_NAME: feynman
-      DB_PORT: 5432
-      GEMINI_API_KEY: ${GEMINI_API_KEY}
-      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
-      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
-      AWS_REGION: ap-south-1
-    ports:
-      - "8000:8000"
-    depends_on:
-      postgres:
-        condition: service_healthy
-    volumes:
-      - ./static:/app/static
+    backend:
+        build:
+            context: .
+            dockerfile: Dockerfile
+        container_name: feynman-backend
+        environment:
+            DB_HOST: postgres
+            DB_USER: postgres
+            DB_PASSWORD: postgres
+            DB_NAME: feynman
+            DB_PORT: 5432
+            GEMINI_API_KEY: ${GEMINI_API_KEY}
+            AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+            AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+            AWS_REGION: ap-south-1
+        ports:
+            - "8080:8000"
+        depends_on:
+            postgres:
+                condition: service_healthy
+        volumes:
+            - ./static:/app/static
+        restart: unless-stopped
 
 volumes:
-  postgres_data:
+    postgres_data:
